--- a/paper1/report.tex
+++ b/paper1/report.tex
@@ -1,6 +1,6 @@
 \documentclass[sigconf]{acmart}
 
-
+\input{format/i523}
 \usepackage{amsmath}
 \usepackage{algorithm}
 % \usepackage[section]{placeins}
